--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 # dependencies
 /node_modules
+backend/app/node_modules/
 
 # profiling files
 chrome-profiler-events*.json
@@ -43,3 +44,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+backend/app/node_modules/.bin/nodemon
+backend/app/node_modules/.bin/nodemon.cmd
+backend/app/node_modules/.bin/nodemon.ps1
+.gitignore
