--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -1,9 +1,9 @@
 {
   "name": "app",
   "version": "0.0.0",
-  "private": true,
+  "private": true,  
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^7.3.1",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.22",
     "pug": "2.0.0-beta11"
   }
 }
