--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "0.0.0",
-  "private": true,  
+  "private": true,
   "scripts": {
     "start": "nodemon app.js"
   },
@@ -15,5 +15,9 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.22",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0"
   }
 }
